Updated AppScreenshot DeepColors

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
                     <span class="marker">model evaluation</span>, <span class="marker">constructing database with
                       SQLite</span> where results of the evaluation were kept,
                     <span class="amrker">implementing, and training machine
-                      learning models</span>. </p>
+                      learning models</span>.
+                  </p>
                   <p>- One of the things I developed for the purpose of the evaluation was an internal visualization
                     tool with Flask where team members can check the spectrogram and waveform of any audio files
                     interactively. Below gif is what I have found on twitter and is pretty similar to what I developed
@@ -246,7 +247,8 @@
                     collect scores and transcription from people so that we were then able to calculate metrics such as
                     <span class="marker">Mean Opinion Score (MOS)</span> and <span class="marker">Word Error Rate
                       (WER)</span> that were part of metrics that we used to
-                    evaluate deep learning models.</p>
+                    evaluate deep learning models.
+                  </p>
 
                   <p>Worked with team members in an <span class="marker">agile</span> way by changing things as we
                     needed and learned how <span class="marker">Scrum</span> works. Since the internship was
@@ -308,16 +310,7 @@
                 of Deep Learning</span>.<br>
               <div class="row">
                 <div class="column">
-                  <img src="img/DeepColors/devices_logo.png" class="img-fluid" alt="Responsive image" , width="400" ,
-                    height="400">
-                </div>
-                <div class="column">
-                  <img src="img/DeepColors/Appstore_ScreenShot_12.9_EN.001.jpeg" class="img-fluid"
-                    alt="Responsive image">
-                </div>
-                <div class="column">
-                  <img src="img/DeepColors/Appstore_ScreenShot_12.9_EN.002.jpeg" class="img-fluid"
-                    alt="Responsive image">
+                  <img src="img/DeepColors/AppScreenshot_6.5_EN.001.jpeg" class="img-fluid" alt="Responsive image">
                 </div>
               </div>
               <br><br>
