Updated the top layout

--- a/index.html
+++ b/index.html
@@ -128,23 +128,24 @@
       <div class="w-100">
         <h1 class="mb-0"><span class="marker">Kohei Suzuki</span>
         </h1>
-        <div class="subheading mb-5">email address:
-          <a href="mailto:koheisuzuki808@gmail.com">koheisuzuki808@gmail.com</a>&emsp;|&emsp;
-          <a href="docs/koheisuzuki_resume2020_ML.pdf" target="_blank" id="resume">Download CV</a>
+        <div class="subheading mb-5">
+          <h3>email address:
+            <a href="mailto:kohei.suzuki808@gmail.com">kohei.suzuki808@gmail.com</a>&emsp;|&emsp;
+            <a href="docs/koheisuzuki_resume2021_ML.pdf" target="_blank" id="resume">Download CV</a>
+          </h3>
         </div>
         <blockquote class="blockquote blockquote-custom bg-white p-4 shadow rounded">
           <p class="mb-2 mt-2 font-italic">
-            A<span class="marker"> machine
-              learning engineer</span> in the Vancouver area with more than <span class="marker">2 years of machine
-              learning experience</span>.<br>
-            I am able to do from sourcing data to <span class="marker">deployment for productions on the Cloud as well
-              as native apps</span> and always try to optimize each process by
-            using appropriate metrics, algorithms, and data structures.<br>
-
-            Actively <span class="marker">Looking for a fulltime job</span> as a machine learning engineer <span
-              class="marker">in the Vancouver area</span>.<br>
-            I <span class="marker">already have a valid
-              work permit</span> in Canada for one year.<br>
+          <ul>
+            <li><span class="marker">Developed an iOS app</span>, DeepColors that helps users colorie sketches and
+              grayscale images, by using the
+              power of DeepLearning.</li>
+            <li><span class="marker">More than 3 years of Machine Learning Experience</span> including 6 months of
+              internship as an ML engineer.</li>
+            <li><span class="marker">Looking for a full time job</span> as a Machine Learning Engoneer in the Vancouver
+              area.</li>
+            <li><span class="marker">Already have a valid work permit</span> for one year in Canada.</li>
+          </ul>
           </p>
         </blockquote>
         <p>
