--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               </div>
               <h3 class="card-title"><img src="img/DeepColors/logo_transparent.png" class="img-fluid"
                   alt="Responsive image" width="50" height="50">DeepColors app for iOS&ensp;<a
-                  href="http://35.190.228.199/DeepColors/" target="_blank">Website</a>&ensp;<a
+                  href="https://www.deepcolors-ai.com/" target="_blank">Website</a>&ensp;<a
                   href="https://apps.apple.com/us/app/deepcolors/id1540025064" target="_blank">
                   <img src="img/DeepColors/Download_AppStoreBlack.png" class="img-fluid" alt="Responsive image" ,
                     width="100" , height="100">
